<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/grocery_list"
        android:id="@+id/menu_grocery_list"
        app:showAsAction="always"
        android:icon="@drawable/grocery_list"/>

    <item android:title="@string/add_item"
        android:id="@+id/menu_add"
        app:showAsAction="always"
        android:icon="@drawable/add_shopping_cart_img"/>

    <item android:title="@string/delete_item"
        android:id="@+id/menu_delete"
        app:showAsAction="always"
        android:icon="@drawable/delete_shopping_cart_img"/>

    <item android:title="@string/tax"
        android:id="@+id/menu_tax"/>

    <item android:title="@string/about"
        android:id="@+id/menu_about" />



</menu>